--- a/functions/functions_(good).ipynb
+++ b/functions/functions_(good).ipynb
@@ -635,19 +635,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "e0696082",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.5625    , 0.51515152, 0.78571429, 3.16666667, 0.36986301])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AssertionError",
+     "evalue": "answer is negative!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m exit()\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m/\u001b[39m y\n\u001b[1;32m---> 18\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mall(y \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswer is negative!\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     20\u001b[0m divide(x, y)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: answer is negative!"
+     ]
     }
    ],
    "source": [
@@ -655,11 +656,21 @@
     "# redo calculator exercise from previous chapter\n",
     "# use assert\n",
     "\n",
+    "# original answer (edited already)\n",
+    "#def divide(x, y):\n",
+    "#    if np.all(y < 2):\n",
+    "#        return exit()\n",
+    "#    return x / y\n",
+    "#assert y.all() != 0, 'answer is negative!'\n",
+    "\n",
+    "x = np.array([36, 34, 44, 76, 27])\n",
+    "y = np.array([64, 66, 56, 24, 73])\n",
+    "\n",
     "def divide(x, y):\n",
-    "    if y.all() == 0:\n",
+    "    if np.all(y < 0):\n",
     "        return exit()\n",
     "    return x / y\n",
-    "assert y.all() != 0, 'answer is negative!'\n",
+    "assert np.all(y < 0), 'answer is negative!'\n",
     "\n",
     "divide(x, y)"
    ]
@@ -713,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "d413df7a",
    "metadata": {},
    "outputs": [
@@ -732,7 +743,7 @@
     "\n",
     "def divide(x, y):\n",
     "    try:\n",
-    "        y.all() != 0\n",
+    "        # y.all() != 0  this line is not necessary\n",
     "        answer = x / y\n",
     "        print(answer)\n",
     "    except:\n",
@@ -745,38 +756,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "5e514379",
+   "execution_count": 4,
+   "id": "7941d572",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.5625            inf 0.78571429 3.16666667 0.36986301]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Rachel\\AppData\\Local\\Temp\\ipykernel_8612\\2770902398.py:4: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  answer = x / y\n"
+      "dividing by zero -.-\n"
      ]
     }
    ],
    "source": [
+    "# testing when y = 0 or y contains 0\n",
+    "x = 5\n",
+    "y = 0\n",
+    "\n",
     "def divide(x, y):\n",
     "    try:\n",
-    "        y.all() != 0\n",
+    "        # y.all() != 0  this line is not necessary\n",
     "        answer = x / y\n",
     "        print(answer)\n",
     "    except:\n",
     "        print(\"dividing by zero -.-\")\n",
-    "\n",
-    "x = np.array([36, 34, 44, 76, 27])\n",
-    "y = np.array([64, 0, 56, 24, 73])\n",
+    "        \n",
     "divide(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5e514379",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# previous answer\n",
+    "\n",
+    "#def divide(x, y):\n",
+    "#    try:\n",
+    "#        y.all() != 0\n",
+    "#        answer = x / y\n",
+    "#        print(answer)\n",
+    "#    except:\n",
+    "#        print(\"dividing by zero -.-\")\n",
+    "\n",
+    "#x = np.array([36, 34, 44, 76, 27])\n",
+    "#y = np.array([64, 0, 56, 24, 73])\n",
+    "#divide(x, y)"
    ]
   }
  ],
