--- a/Just Exercises (I)/just_exercises_(i).ipynb
+++ b/Just Exercises (I)/just_exercises_(i).ipynb
@@ -505,6 +505,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "88dbeb64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple',\n",
+       " 'banana',\n",
+       " 'pineapple',\n",
+       " 'jackfruit',\n",
+       " 'peach',\n",
+       " 'durian',\n",
+       " 'watermelon',\n",
+       " 'mango',\n",
+       " 'strawberry',\n",
+       " 'passionfruit',\n",
+       " 'dragon fruit',\n",
+       " 'apricots',\n",
+       " 'oranges']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"pineapple\", \"jackfruit\",\n",
+    "        \"peach\", \"durian\", \"watermelon\", \"mango\",\n",
+    "        \"strawberry\", \"passionfruit\"]\n",
+    "\n",
+    "# new_fruits = [\"dragon fruit\", \"apricots\", \"oranges\"]\n",
+    "\n",
+    "fruits.append(\"dragon fruit\")\n",
+    "fruits.append(\"apricots\")\n",
+    "fruits.append(\"oranges\")\n",
+    "fruits\n",
+    "\n",
+    "#same as below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "447db0e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple',\n",
+       " 'banana',\n",
+       " 'pineapple',\n",
+       " 'jackfruit',\n",
+       " 'peach',\n",
+       " 'durian',\n",
+       " 'watermelon',\n",
+       " 'mango',\n",
+       " 'strawberry',\n",
+       " 'passionfruit',\n",
+       " 'dragon fruit',\n",
+       " 'apricots',\n",
+       " 'oranges']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"pineapple\", \"jackfruit\",\n",
+    "        \"peach\", \"durian\", \"watermelon\", \"mango\",\n",
+    "        \"strawberry\", \"passionfruit\"]\n",
+    "\n",
+    "new_fruits = [\"dragon fruit\", \"apricots\", \"oranges\"]\n",
+    "\n",
+    "fruits + new_fruits\n",
+    "\n",
+    "# Is this the list?\n",
+    "# lowkey don't look like it"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 199,
    "id": "e0593c58",
    "metadata": {
@@ -557,20 +643,24 @@
     "new_fruits = [\"dragon fruit\", \"apricots\", \"oranges\"]\n",
     "\n",
     "fruits = new_fruits + fruits\n",
-    "print(fruits)"
+    "print(fruits)\n",
+    "\n",
+    "# once again same problem as the above?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 8,
    "id": "aed6ad3b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['apple', 'banana', 'pineapple', 'jackfruit', ['dragon fruit', 'apricots', 'oranges'], 'peach', 'durian', 'watermelon', 'mango', 'strawberry', 'passionfruit']\n"
+      "['apple', 'banana', 'pineapple', 'jackfruit', 'peach', ['dragon fruit', 'apricots', 'oranges'], 'durian', 'watermelon', 'mango', 'strawberry', 'passionfruit']\n"
      ]
     }
    ],
@@ -581,10 +671,41 @@
     "\n",
     "new_fruits = [\"dragon fruit\", \"apricots\", \"oranges\"]\n",
     "\n",
-    "fruits.insert(4, new_fruits)\n",
+    "fruits.insert(5, new_fruits)\n",
     "print(fruits)\n",
     "\n",
-    "# err nested list once again..."
+    "# err nested list once again...\n",
+    "# this only works if you know the total number of elements\n",
+    "# find a way to count number of elements/2?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "52bfbccf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'pineapple', 'jackfruit', 'peach', 'dragon fruit', 'apricots', 'oranges', 'durian', 'watermelon', 'mango', 'strawberry', 'passionfruit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"pineapple\", \"jackfruit\",\n",
+    "        \"peach\", \"durian\", \"watermelon\", \"mango\",\n",
+    "        \"strawberry\", \"passionfruit\"]\n",
+    "\n",
+    "new_fruits = [\"dragon fruit\", \"apricots\", \"oranges\"]\n",
+    "\n",
+    "fruits.insert(5, \"dragon fruit\")\n",
+    "fruits.insert(6, \"apricots\")\n",
+    "fruits.insert(7, \"oranges\")\n",
+    "print(fruits)\n",
+    "\n",
+    "# I feel like this is not very efficient eh"
    ]
   },
   {
@@ -608,12 +729,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a3cc74a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution here"
+    "# Your solution here\n",
+    "\n",
+    "fibonnaci = [0, 1]\n",
+    "\n",
+    "for fibonnaci[::-1] in range(0):\n",
+    "    fibonnaci.append(fibonnaci[-1] + fibonnaci[-2])  # infinite loop!\n",
+    "print(fibonnaci)\n",
+    "\n",
+    "\n",
+    "# reverse indexing [-1]"
    ]
   },
   {
