--- a/Just Exercises (I)/just_exercises_(i).ipynb
+++ b/Just Exercises (I)/just_exercises_(i).ipynb
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "88dbeb64",
+   "id": "f14bdc1e",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "447db0e9",
+   "id": "850c0925",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "52bfbccf",
+   "id": "070b1be1",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "a3cc74a2",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1]\n"
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144]\n"
      ]
     }
    ],
@@ -746,12 +746,9 @@
     "\n",
     "fibonnaci = [0, 1]\n",
     "\n",
-    "for fibonnaci[::-1] in range(0):\n",
-    "    fibonnaci.append(fibonnaci[-1] + fibonnaci[-2])  # infinite loop!\n",
-    "print(fibonnaci)\n",
-    "\n",
-    "\n",
-    "# reverse indexing [-1]"
+    "for i in range(2, 13):\n",
+    "    fibonnaci.append(fibonnaci[i - 1] + fibonnaci[i - 2])\n",
+    "print(fibonnaci)"
    ]
   },
   {
