--- a/functions/functions_(good).ipynb
+++ b/functions/functions_(good).ipynb
@@ -646,7 +646,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m exit()\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m/\u001b[39m y\n\u001b[1;32m---> 18\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mall(y \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswer is negative!\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     20\u001b[0m divide(x, y)\n",
+      "Cell \u001b[1;32mIn[1], line 19\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m exit()\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m/\u001b[39m y\n\u001b[1;32m---> 19\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mall(y \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswer is negative!\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     21\u001b[0m divide(x, y)\n",
       "\u001b[1;31mAssertionError\u001b[0m: answer is negative!"
      ]
     }
@@ -656,7 +656,7 @@
     "# redo calculator exercise from previous chapter\n",
     "# use assert\n",
     "\n",
-    "# original answer (edited already)\n",
+    "# original answer from previous exercise (edited already)\n",
     "#def divide(x, y):\n",
     "#    if np.all(y < 2):\n",
     "#        return exit()\n",
@@ -667,7 +667,7 @@
     "y = np.array([64, 66, 56, 24, 73])\n",
     "\n",
     "def divide(x, y):\n",
-    "    if np.all(y < 0):\n",
+    "    if np.all(y == 0):\n",
     "        return exit()\n",
     "    return x / y\n",
     "assert np.all(y < 0), 'answer is negative!'\n",
@@ -688,30 +688,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "508d001d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "answer is negative!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m exit()\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m/\u001b[39m y\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m y\u001b[38;5;241m.\u001b[39mall() \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswer is negative!\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      7\u001b[0m divide(x, y)\n",
-      "\u001b[1;31mAssertionError\u001b[0m: answer is negative!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def divide(x, y):\n",
-    "    if y.all() == 0:\n",
-    "        return exit()\n",
-    "    return x / y\n",
-    "assert y.all() != 0, 'answer is negative!'\n",
+    "# wrong answer\n",
+    "#def divide(x, y):\n",
+    "#    if y.all() == 0:\n",
+    "#        return exit()\n",
+    "#    return x / y\n",
+    "#assert y.all() != 0, 'answer is negative!'\n",
     "\n",
-    "divide(x, y)"
+    "#divide(x, y)"
    ]
   },
   {
