--- a/Just Exercises (I)/just_exercises_(i).ipynb
+++ b/Just Exercises (I)/just_exercises_(i).ipynb
@@ -768,7 +768,7 @@
     "        fib_list = [0]\n",
     "        print(fib_list)\n",
     "    else:\n",
-    "        print(\"n cannot be less than 3!\")\n",
+    "        print(\"n cannot be negative!\")\n",
     "        \n",
     "fibonnaci(0)"
    ]
@@ -804,7 +804,7 @@
     "        fib_list = [0]\n",
     "        print(fib_list)\n",
     "    else:\n",
-    "        print(\"n cannot be less than 3!\")\n",
+    "        print(\"n cannot be negative!\")\n",
     "\n",
     "fibonnaci(-1)"
    ]
@@ -840,7 +840,7 @@
     "        fib_list = [0]\n",
     "        print(fib_list)\n",
     "    else:\n",
-    "        print(\"n cannot be less than 3!\")\n",
+    "        print(\"n cannot be negative!\")\n",
     "        \n",
     "fibonnaci(13)"
    ]
@@ -874,7 +874,7 @@
     "        fib_list = [0]\n",
     "        print(fib_list)\n",
     "    else:\n",
-    "        print(\"n cannot be less than 3!\")\n",
+    "        print(\"n cannot be negative!\")\n",
     "        \n",
     "fibonnaci(10)"
    ]
