--- a/functions/functions_(good).ipynb
+++ b/functions/functions_(good).ipynb
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "e0696082",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 19\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m exit()\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m/\u001b[39m y\n\u001b[1;32m---> 19\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mall(y \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswer is negative!\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     21\u001b[0m divide(x, y)\n",
+      "Cell \u001b[1;32mIn[15], line 23\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m/\u001b[39m y\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;66;03m#if np.all(y == 0):\u001b[39;00m\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;66;03m#return exit()\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m \u001b[43mdivide\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[15], line 18\u001b[0m, in \u001b[0;36mdivide\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdivide\u001b[39m(x, y):\n\u001b[1;32m---> 18\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m np\u001b[38;5;241m.\u001b[39mall(y \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124manswer is negative!\u001b[39m\u001b[38;5;124m'\u001b[39m \n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m x \u001b[38;5;241m/\u001b[39m y\n",
       "\u001b[1;31mAssertionError\u001b[0m: answer is negative!"
      ]
     }
@@ -663,14 +664,47 @@
     "#    return x / y\n",
     "#assert y.all() != 0, 'answer is negative!'\n",
     "\n",
+    "\n",
+    "# when there is a 0 in y\n",
+    "x = np.array([36, 34, 44, 76, 27])\n",
+    "y = np.array([64, 0, 56, 24, 73])\n",
+    "\n",
+    "def divide(x, y):\n",
+    "    assert np.all(y != 0), 'answer is negative!'  # assert stops if condition fails\n",
+    "    return x / y\n",
+    "    #if np.all(y == 0):\n",
+    "    #return exit()\n",
+    "\n",
+    "divide(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "dcad06bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.5625    , 0.51515152, 0.78571429, 3.16666667, 0.36986301])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# when there is no 0 in y\n",
     "x = np.array([36, 34, 44, 76, 27])\n",
     "y = np.array([64, 66, 56, 24, 73])\n",
     "\n",
     "def divide(x, y):\n",
-    "    if np.all(y == 0):\n",
-    "        return exit()\n",
+    "    assert np.all(y != 0), 'answer is negative!'\n",
     "    return x / y\n",
-    "assert np.all(y < 0), 'answer is negative!'\n",
+    "    #if np.all(y == 0):\n",
+    "    #return exit()\n",
     "\n",
     "divide(x, y)"
    ]
