--- a/functions/functions_(need).ipynb
+++ b/functions/functions_(need).ipynb
@@ -645,7 +645,7 @@
     "# Your solution here\n",
     "def add(x, y): \n",
     "    return x + y\n",
-    "print(add(1, 2))"
+    "add(1, 2)"
    ]
   },
   {
@@ -665,7 +665,7 @@
    "source": [
     "def subtract(x, y):\n",
     "    return x - y\n",
-    "print(subtract(2, 1))"
+    "subtract(2, 1)"
    ]
   },
   {
@@ -685,12 +685,12 @@
    "source": [
     "def multiply(x, y):\n",
     "    return x * y\n",
-    "print(multiply(1, 2))"
+    "multiply(1, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "920f76fd",
    "metadata": {},
    "outputs": [],
@@ -699,7 +699,7 @@
     "# exit() or quit() to force stop python\n",
     "\n",
     "def divide(x, y):\n",
-    "    if np.all(y < 0):\n",
+    "    if np.all(y == 0):\n",
     "        return exit()\n",
     "    return x / y"
    ]
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d289ca61",
    "metadata": {},
    "outputs": [
@@ -784,7 +784,7 @@
        "array([0.5625    , 0.51515152, 0.78571429, 3.16666667, 0.36986301])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
     "y = np.array([64, 66, 56, 24, 73])\n",
     "\n",
     "def divide(x, y):\n",
-    "    if np.all(y < 0):\n",
+    "    if np.all(y == 0):\n",
     "        return exit()\n",
     "    return x / y\n",
     "\n",
