--- a/Just Exercises (I)/just_exercises_(i).ipynb
+++ b/Just Exercises (I)/just_exercises_(i).ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "9d162ca2",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
     "        \"strawberry\", \"passionfruit\"]\n",
     "\n",
     "for i in fruits:\n",
-    "    print(f\"{i[0]} {i[-1]}\")\n",
+    "    print(i[0], i[-1])\n",
     "#for end_letter in fruits:\n",
     " #   answer.append(end_letter[-1])\n",
     "\n",
@@ -920,22 +920,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 40,
    "id": "4e21cb8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Max element: 83, index: 2'"
+       "'Max element: 49, Index: 9'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# original set of code\n",
+    "\n",
     "def max_info(numbers):\n",
     "    for i in range(len(numbers)):\n",
     "        if numbers[i] > numbers[i - 1]:\n",
@@ -950,32 +952,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 51,
    "id": "21b0b749",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Max value: 83, Index: 2'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# is there a way to combine these two together?\n",
-    "# ah yes there is so this one is invalid alr\n",
-    "# refer to the top one\n",
+    "# updated new codes\n",
     "\n",
     "def max_info(numbers):\n",
+    "    my_max = numbers[0]\n",
     "    for i in range(len(numbers)):\n",
-    "        if numbers[i] > numbers[i - 1]:\n",
+    "        if my_max < numbers[i]:\n",
     "            my_max = numbers[i]\n",
-    "            my_max_index = numbers.index(my_max)\n",
-    "            return my_max_index\n",
+    "    my_max_index = numbers.index(my_max)\n",
+    "    return f\"Max value: {my_max}, Index: {my_max_index}\"\n",
     "        \n",
     "numbers = [40, 27, 83, 44, 74, 51, 76, 77, 10, 49]\n",
     "max_info(numbers)"
