--- a/files, folders and os/files,_folders_and_os_(need).ipynb
+++ b/files, folders and os/files,_folders_and_os_(need).ipynb
@@ -1,1 +1,454 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Files, Folders and OS (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1 Important concepts"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.1 Path"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.2 More about relative paths"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.3 Path separator"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Text files vs Binary files"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Extentions"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 1.4 Opening and closing files"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2 Playing with the OS"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.1 Some packages"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.2 OS safe paths"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.3 Creating folders"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.4 Checking for existence"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.5 Copying files"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.6 Listing files"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.7 Moving about"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.8 Extracting Info"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### 2.9 Deleting stuff"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 7 :  The OS is my oyster"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Exercise 8 :  Tidying a collaboration"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n\n\n# Your solution here\n\n\n"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Files, Folders and OS (Need)</span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6cdab0a",
+   "metadata": {},
+   "source": [
+    "## 1 Important concepts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bbb93df",
+   "metadata": {},
+   "source": [
+    "### 1.1 Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ef482c2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "# 'path' specify a location on computer\n",
+    "# specifying path absolutely or relatively\n",
+    "\n",
+    "# example of absolute path\n",
+    "# C:\\\\Users\\Chammika\\Desktop\\data-01.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12bd428f",
+   "metadata": {},
+   "source": [
+    "### 1.2 More about relative paths"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f5c77a1",
+   "metadata": {},
+   "source": [
+    "- `.` to say 'this folder'\n",
+    "- `..` to say 'one folder above'\n",
+    "- `.\\data-files\\data-01.txt` means file named `data-01.txt` is in folder named `data-files` in the **current** folder\n",
+    "- `..\\data-files\\data-01.txt` means file named `data-01.txt` is in folder named `data-files` in the folder **above**\n",
+    "- Mac OS X and Linux use `~` to refer to home directory\n",
+    "- accessing `Desktop` 'relatively' with `~/Desktop`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a30b42f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "754e12f8",
+   "metadata": {},
+   "source": [
+    "### 1.3 Path separator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ccd506b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here\n",
+    "# biggest diff btw windows and Max OS X is path separator\n",
+    "# windows uses \\\n",
+    "# Max OS X (Linux) uses /"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2ea6677",
+   "metadata": {},
+   "source": [
+    "- windows: `C:\\\\Users\\chammika\\Desktop\\data-01.txt`\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3beb9fd7",
+   "metadata": {},
+   "source": [
+    "### Text files vs Binary files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "645c4b17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47878d82",
+   "metadata": {},
+   "source": [
+    "### Extentions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c56772ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "232915a4",
+   "metadata": {},
+   "source": [
+    "### 1.4 Opening and closing files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "814c2f22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0229def9",
+   "metadata": {},
+   "source": [
+    "## 2 Playing with the OS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc8ad940",
+   "metadata": {},
+   "source": [
+    "### 2.1 Some packages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be9d9bb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7973cd9",
+   "metadata": {},
+   "source": [
+    "### 2.2 OS safe paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85325bfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7add76d9",
+   "metadata": {},
+   "source": [
+    "### 2.3 Creating folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e68b5e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee2fd042",
+   "metadata": {},
+   "source": [
+    "### 2.4 Checking for existence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a017d3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fabb74b",
+   "metadata": {},
+   "source": [
+    "### 2.5 Copying files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6179aedb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baaaaf66",
+   "metadata": {},
+   "source": [
+    "### 2.6 Listing files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25033ed7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09ae6feb",
+   "metadata": {},
+   "source": [
+    "### 2.7 Moving about"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "740e5a51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bb53390",
+   "metadata": {},
+   "source": [
+    "### 2.8 Extracting Info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd42ed94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd4e394d",
+   "metadata": {},
+   "source": [
+    "### 2.9 Deleting stuff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "290404dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Your code here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec2a6a6a",
+   "metadata": {},
+   "source": [
+    "## Exercise 7 :  The OS is my oyster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e537869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "# Your solution here\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcf1deb8",
+   "metadata": {},
+   "source": [
+    "## Exercise 8 :  Tidying a collaboration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78e1fbac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "# Your solution here\n",
+    "\n",
+    "\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
