--- a/random numbers/random_numbers_(need).ipynb
+++ b/random numbers/random_numbers_(need).ipynb
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "212bf83a",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean is 0 and the standard deviation is 0.355\n"
+      "The mean is 0.2951 and the standard deviation is 0.537\n"
      ]
     }
    ],
@@ -780,10 +780,10 @@
     "# number of 13C as heads\n",
     "\n",
     "no_of_c = 27\n",
-    "data = [c_count(no_of_c, probability = .9889) for i in range(no_of_c)]\n",
+    "data = [c_count(no_of_c, probability = .9889) for i in range(10000)]\n",
     "mean = sum(data)/len(data)\n",
     "s_deviate = np.std(data)\n",
-    "print(f'The mean is {mean:.0f} and the standard deviation is {s_deviate:.3f}')"
+    "print(f'The mean is {mean} and the standard deviation is {s_deviate:.3f}')"
    ]
   },
   {
