--- a/files, folders and os/files,_folders_and_os_(need).ipynb
+++ b/files, folders and os/files,_folders_and_os_(need).ipynb
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "66e3bb7e",
+   "id": "7ed4aa90",
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "bf44014d",
+   "id": "938eb370",
    "metadata": {},
    "outputs": [
     {
@@ -2037,6 +2037,13 @@
    "source": [
     "# 1\n",
     "\n",
+    "month = {\n",
+    "'jan': '01', 'feb': '02', 'mar': '03',\n",
+    "'apr': '04', 'may': '05', 'jun': '06',\n",
+    "'jul': '07', 'aug': '08', 'sep': '09',\n",
+    "'oct': '10', 'nov': '11', 'dec': '12'\n",
+    "}\n",
+    "\n",
     "name = 'oct-08_singapore.txt'\n",
     "month_name = name[0:3]\n",
     "new_file = name.replace(month_name, month[month_name])\n",
@@ -2046,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "4880456a",
+   "id": "cfb00a16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2098,7 +2105,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "247cabc9",
+   "id": "6a153121",
    "metadata": {},
    "outputs": [
     {
@@ -2119,7 +2126,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "103524d7",
+   "id": "ee312c61",
    "metadata": {},
    "outputs": [
     {
@@ -2152,7 +2159,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "6d00e1ed",
+   "id": "a93407eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2168,7 +2175,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "ac382b03",
+   "id": "a3aa5e26",
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2364,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "9744b394",
+   "id": "bb1c85ff",
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2394,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "dee37fa3",
+   "id": "9ffc9730",
    "metadata": {},
    "outputs": [
     {
