--- a/numerical solutions/numerical_solutions_(need).ipynb
+++ b/numerical solutions/numerical_solutions_(need).ipynb
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "39121e66",
    "metadata": {},
    "outputs": [],
@@ -647,9 +647,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "ad5e8b94",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -657,7 +659,7 @@
        "Text(0.5, 0, 'Time(mins)')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -690,15 +692,15 @@
     "\n",
     "all_time = np.arange(start = 0, stop = max_time, step = dt)\n",
     "\n",
-    "for time in all_time:\n",
-    "    all_volume.append(volume)\n",
-    "    \n",
-    "    def leak_rate(volume):\n",
+    "def leak_rate(volume):\n",
     "        h = volume / base_area\n",
     "        #print(volume)\n",
     "        speed = np.sqrt(2 * 9.8 * h)\n",
     "        #print(speed)\n",
     "        return 60 * speed * leak_area\n",
+    "\n",
+    "for time in all_time:\n",
+    "    all_volume.append(volume)\n",
     "    \n",
     "    #leak_rate = 6 * math.sqrt(volume * 2 * 9.8 / 70)\n",
     "    \n",
